--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -173,6 +173,10 @@
 \begin{joblong}{External Support Specialist Co-op}{Sep 2023 - Aug 2024}
 \item Chartered Professional Accountants of British Columbia
 \end{joblong}
+
+\begin{joblong}{Quick Service Attendant}{Sep 2021 - Aug 2022}
+\item Canucks Sports and Entertainment
+\end{joblong}
   
 %Projects
 \section{Projects}
@@ -184,7 +188,7 @@
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
 \textbf{Pandemic Simulation Experiment} & \hfill \href{https://github.com/cantafionathan/pandemic-simulation}{Link to Repo} \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{A STAT 404 class project where my partner and I simulated the evolution of a pandemic under different conditions to determine which policies are most effective at preventing spread}  \\
+\multicolumn{2}{@{}X@{}}{A STAT 404 class project where my partner and I simulated the evolution of a pandemic under different conditions to determine which policies are most effective at preventing disease spread}  \\
 \end{tabularx}
 
 
@@ -192,11 +196,11 @@
 %	EDUCATION
 %----------------------------------------------------------------------------------------
 \section{Education}
-\begin{tabularx}{\linewidth}{@{}l X@{}}	
-2025 - present & M.Sc. Statistics \hfill \textbf{UBC} \\
 
-2020 - 2025 & B.Sc. Combined Honours, Mathematics and Statistics \hfill \textbf{UBC} \\ 
-
+\begin{tabularx}{\linewidth}{@{}l X r@{}}
+\textbf{M.Sc. Statistics} & UBC & 2025--present \\
+\textbf{B.Sc. Combined Honours, Mathematics and Statistics} 
+& UBC & 2020--2025 \\
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
@@ -212,13 +216,13 @@
 %	AWARDS
 %----------------------------------------------------------------------------------------
 \section{Awards}
-\begin{joblong}{Constance van Eeden Scholar Award}{Sep 2025}
-\item University of British Columbia
-\end{joblong}
 
-\begin{joblong}{NSERC USRA}{May 2025}
-\item University of British Columbia
-\end{joblong}
+\begin{tabularx}{\linewidth}{@{}l X r@{}}
+\textbf{Constance van Eeden Scholar Award} 
+& UBC & 2025 \\
+\textbf{NSERC Undergraduate Student Research Award (USRA)} 
+& UBC & 2025 \\
+\end{tabularx}
 
 \vfill
 \center{\footnotesize Last updated: \today}
