--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -145,7 +145,7 @@
 \Huge{Nathan Cantafio} \\[7.5pt]
 \href{https://github.com/cantafionathan}{\raisebox{-0.05\height}\faGithub\ cantafionathan} \ $|$ \ 
 %\href{https://linkedin.com/in/username}{\raisebox{-0.05\height}\faLinkedin\ username} \ $|$ \ 
-\href{https://cantafionathan.github.io/}{\raisebox{-0.05\height}\faGlobe \ cantafionathan.github.io} \ $|$ \ 
+\href{https://nathancantafio.com/}{\raisebox{-0.05\height}\faGlobe \ nathancantafio.com} \ $|$ \ 
 \href{mailto:nathan.cantafio@stat.ubc.ca}{\raisebox{-0.05\height}\faEnvelope \ nathan.cantafio@stat.ubc.ca} \ 
 %\href{tel:+000000000000}{\raisebox{-0.05\height}\faMobile \ +00.00.000.000} \\
 \end{tabularx}
@@ -182,7 +182,7 @@
 \section{Projects}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Pok\'emon Team Building} & \hfill \href{https://github.com/cantafionathan/pokemon}{Link to Repo} \\[3.75pt]
+\textbf{Pok\'emon Team Building as an Optimization Problem} & \hfill \href{https://github.com/cantafionathan/pokemon}{Link to Repo} \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{Based on a STAT 535C class project where I applied various optimization techniques to the combinatorial black-box function evaluating Pok\'emon team strength}  \\
 \end{tabularx}
 
